# swebench-eval-lab

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DISCLAIMER.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  eval-parity.yml  eval.yml  rollout.yml  verify-golden.yml
annotations/swebench_pro/: README.md
annotations/swebench_pro/instance_NodeBB__NodeBB-397835a05a8e2897324e566b41c5e616e172b4af-v89631a1cdb318276acb48860c5d78077211397c6/: candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_NodeBB__NodeBB-da0211b1a001d45d73b4c84c6417a4f1b0312575-vf2cf3cbd463b7ad942381f1c6d077626485a1e9e/: aggregate.json
annotations/swebench_pro/instance_ansible__ansible-42355d181a11b51ebfc56f6f4b3d9c74e01cb13b-v1055803c3a812189a1133297f7f5468579283f86/: aggregate.json  candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_ansible__ansible-d58e69c82d7edd0583dd8e78d76b075c33c3151e-v173091e2e36d38c978002990795f66cfc0af30ad/: aggregate.json  candidate_3.json
annotations/swebench_pro/instance_element-hq__element-web-72a8f8f03b1a01bb70ef8a5bb61759416991b32c-vnan/: aggregate.json  candidate_1.json  candidate_3.json
annotations/swebench_pro/instance_flipt-io__flipt-381b90f718435c4694380b5fcd0d5cf8e3b5a25a/: aggregate.json  candidate_1.json
annotations/swebench_pro/instance_flipt-io__flipt-518ec324b66a07fdd95464a5e9ca5fe7681ad8f9/: candidate_2.json  candidate_3.json
annotations/swebench_pro/instance_flipt-io__flipt-690672523398c2b6f6e4562f0bf9868664ab894f/: aggregate.json
annotations/swebench_pro/instance_flipt-io__flipt-aebaecd026f752b187f11328b0d464761b15d2ab/: aggregate.json  candidate_2.json  candidate_3.json
annotations/swebench_pro/instance_flipt-io__flipt-b3cd920bbb25e01fdb2dab66a5a913363bc62f6c/: candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_flipt-io__flipt-cd18e54a0371fa222304742c6312e9ac37ea86c1/: candidate_2.json  candidate_3.json
annotations/swebench_pro/instance_flipt-io__flipt-dbe263961b187e1c5d7fe34c65b000985a2da5a0/: candidate_2.json  candidate_3.json
annotations/swebench_pro/instance_flipt-io__flipt-f808b4dd6e36b9dc8b011eb26b196f4e2cc64c41/: aggregate.json  candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_future-architect__vuls-73f0adad95c4d227e2ccfa876c85cc95dd065e13/: aggregate.json  candidate_2.json
annotations/swebench_pro/instance_future-architect__vuls-dc496468b9e9fb73371f9606cdcdb0f8e12e70ca/: aggregate.json
annotations/swebench_pro/instance_future-architect__vuls-f0b3a8b1db98eb1bd32685f1c36c41a99c3452ed/: candidate_1.json  candidate_3.json
annotations/swebench_pro/instance_future-architect__vuls-fd18df1dd4e4360f8932bc4b894bd8b40d654e7c/: candidate_1.json
annotations/swebench_pro/instance_gravitational__teleport-2be514d3c33b0ae9188e11ac9975485c853d98bb-vce94f93ad1030e3136852817f2423c1b3ac37bc4/: candidate_2.json
annotations/swebench_pro/instance_gravitational__teleport-4d0117b50dc8cdb91c94b537a4844776b224cd3d/: aggregate.json  candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_gravitational__teleport-eda668c30d9d3b56d9c69197b120b01013611186/: candidate_2.json  candidate_3.json
annotations/swebench_pro/instance_internetarchive__openlibrary-62d2243131a9c7e6aee00d1e9c5660fd5b594e89-v0f5aece3601a5b4419f7ccec1dbda2071be28ee4/: candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_internetarchive__openlibrary-77c16d530b4d5c0f33d68bead2c6b329aee9b996-ve8c8d62a2b60610a3c4631f5f23ed866bada9818/: candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_internetarchive__openlibrary-9cd47f4dc21e273320d9e30d889c864f8cb20ccf-v0f5aece3601a5b4419f7ccec1dbda2071be28ee4/: candidate_1.json
annotations/swebench_pro/instance_internetarchive__openlibrary-b67138b316b1e9c11df8a4a8391fe5cc8e75ff9f-ve8c8d62a2b60610a3c4631f5f23ed866bada9818/: aggregate.json  candidate_1.json  candidate_2.json  candidate_3.json
annotations/swebench_pro/instance_navidrome__navidrome-b65e76293a917ee2dfc5d4b373b1c62e054d0dca/: aggregate.json  candidate_1.json  candidate_2.json
annotations/swebench_pro/instance_navidrome__navidrome-d613b1930688422122796b43acb3caf2538c8fd1/: aggregate.json  candidate_2.json
annotations/swebench_pro/instance_protonmail__webclients-7e54526774e577c0ebb58ced7ba8bef349a69fec/: aggregate.json  candidate_1.json  candidate_3.json
annotations/swebench_pro/instance_protonmail__webclients-bf2e89c0c488ae1a87d503e5b09fe9dd2f2a635f/: candidate_3.json
datasets/: README.md
datasets/swebench_pro/: README.md
docs/: README.md  conventions.md  patch-extraction.md  traces.md
docs/core/: README.md  spec.md
docs/decisions/: ADR-0001-patch-extraction-and-grading.md  ADR-0002-interface-style-abc-vs-protocol.md  README.md  patch-extraction-decisions.md
docs/experiments/: README.md  playbook.md
docs/horizontal/: README.md  plan.md  spec.md  workspace-layout.md
docs/workstreams/: README.md  w1-related-files.md  w2-solve-eval.md  w3-quality-audit.md
experiments/batch_annotation/: qa_log.md  round5_ids.txt
experiments/eval_issues/: e2e_buggy_entryscript.sh  e2e_buggy_output.json  probe_buggy.sh  probe_fixed.sh  receiver.sh  shell_expansion_in_entryscript.md
experiments/prompt_variance/: README.md  REPORT.md  aggregate.py  aggregate_llm.py  analyze.py  run_experiment.py
src/swe_lab/: __main__.py
src/swebench_eval_lab/: __init__.py
src/swebench_related_files_annotation/: __init__.py  combine.py  paths.py
tasks/: plan.md  todo.md
tests/: conftest.py  test_agent_validator.py  test_aggregator.py  test_cli_eval.py  test_combine.py  test_conversation_observer.py  test_errors.py  test_exchange_record.py  test_host_backend.py  test_loader.py  test_patch.py  test_provider.py  test_proxy.py  test_rollout.py  test_sandbox_manager.py  test_sandbox_mounts.py  test_sandbox_observer.py  test_schema.py  test_storage.py  test_swebench_pro.py  test_swebench_pro_exec.py  test_unit_test_compile.py  test_unit_test_grader.py  test_unit_test_method.py  test_verify.py  test_workspace.py
(+284 files in other folders)
