[project]
name = "swebench-eval-lab"
version = "0.1.0"
description = "Tooling to enrich and audit SWE-bench evaluation data (related-files annotation, and more)"
readme = "README.md"
authors = [{ name = "Liangchen Luo", email = "luolc.witty@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "huggingface-hub>=1.22.0",
    "polars>=1.42.1",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.7",
    "pylint>=4.0.5",
    "pyink>=25.12.0",
    "isort>=8.0.1",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__", "build"]
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportMissingTypeStubs = false
reportPrivateUsage = false
# Common in unit tests.
reportUninitializedInstanceVariable = false
# Many reports from built-in and third-party libraries
reportUnknownArgumentType = false
reportUnknownMemberType = false
# Too strict
reportUnknownVariableType = false
# False positives even with TYPE_CHECKING.
reportImportCycles = false

# Tests routinely call functions for their side effects or to assert on the
# exceptions they raise, so an unused return value is expected there.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportUnusedCallResult = false

[tool.pyink]
line-length = 80
pyink-indentation = 2
pyink-use-majority-quotes = true
target_version = ["py313"]

[tool.isort]
profile = "black"
line_length = 80
force_sort_within_sections = true
lexicographical = true
order_by_type = false
group_by_package = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 80
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C",      # flake8-comprehensions, mccabe
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "ISC001", # single-line-implicit-string-concatenation
    "W",      # pycodestyle warnings
    "RUF008", # mutable-dataclass-default
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E111", # indentation is not a multiple of 4
    "E114", # indentation is not a multiple of 4 (comment)
    "E117", # over-indented
    "W191", # indentation contains tabs
]

[tool.ruff.format]
# Disable ruff formatting. Use pyink in this project.
# Add any other file patterns if your project uses them (e.g., "**/*.ipynb" for Jupyter notebooks)
exclude = ["**/*.py", "**/*.pyi"]
