[project]
name = "swe-lab"
version = "0.1.0"
description = "Tooling to enrich and audit SWE-Bench evaluation data (related-files annotation, and more)"
readme = "README.md"
authors = [{ name = "Liangchen Luo", email = "luolc.witty@gmail.com" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "huggingface-hub>=1.22.0",
    "polars>=1.42.1",
    "typer>=0.27.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "ruff>=0.15.7",
    "pylint>=4.0.5",
    "pyink>=25.12.0",
    "isort>=8.0.1",
]

[tool.pytest.ini_options]
markers = [
    "docker: integration test that needs a usable Docker daemon; auto-skipped when Docker is absent (see tests/conftest.py)",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src", "tests"]
exclude = ["**/__pycache__", "build"]
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
reportMissingTypeStubs = false
reportPrivateUsage = false
# Common in unit tests.
reportUninitializedInstanceVariable = false
# Many reports from built-in and third-party libraries
reportUnknownArgumentType = false
reportUnknownMemberType = false
# Too strict
reportUnknownVariableType = false
# False positives even with TYPE_CHECKING.
reportImportCycles = false

# Tests routinely call functions for their side effects or to assert on the
# exceptions they raise, so an unused return value is expected there.
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportUnusedCallResult = false

[tool.pyink]
line-length = 80
pyink-indentation = 2
pyink-use-majority-quotes = true
target_version = ["py313"]

[tool.isort]
profile = "black"
line_length = 80
force_sort_within_sections = true
lexicographical = true
order_by_type = false
group_by_package = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 80
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "C",      # flake8-comprehensions, mccabe (C90: max-complexity below)
    "D",      # pydocstyle — Google convention (see [tool.ruff.lint.pydocstyle])
    "D401",   # imperative mood: repo-wide choice; google convention would drop it
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "ISC001", # single-line-implicit-string-concatenation
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "W505",   # doc-line-too-long (max-doc-length below)
    "RUF008", # mutable-dataclass-default
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E111", # indentation is not a multiple of 4
    "E114", # indentation is not a multiple of 4 (comment)
    "E117", # over-indented
    "W191", # indentation contains tabs
    # Trivial dunders are self-evident (guide §3.8.3 requires docstrings only
    # for public API / nontrivial / non-obvious functions).
    "D105",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.per-file-ignores]
# Google style §3.8.2.1: test modules need no docstrings (format rules still apply).
"tests/**" = ["D1"]

[tool.ruff.format]
# Disable ruff formatting. Use pyink in this project.
# Add any other file patterns if your project uses them (e.g., "**/*.ipynb" for Jupyter notebooks)
exclude = ["**/*.py", "**/*.pyi"]

[tool.pydoclint]
# Reconcile pydoclint with ruff's D107 (undocumented-public-init): D107
# requires an __init__ docstring, while pydoclint's default (DOC301) forbids
# one. Allow __init__ docstrings; pydoclint still checks their contents.
allow-init-docstring = true
